--- a/Atividade1/Views/Shared/_LayoutInterno.cshtml
+++ b/Atividade1/Views/Shared/_LayoutInterno.cshtml
@@ -37,6 +37,31 @@
             </div>
         </div>
     </nav>
+    <nav id="menu" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-with bg-with border-bottom box-shadow mb-3">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Interno" asp-action="Index" style="margin-right: 4rem;"><h2>Menu</h2></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style="margin-right: 2rem; color: black;">Sessão 1</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style="margin-right: 2rem; color: black;">Sessão 2</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style="margin-right: 2rem; color: black;">Sessão 3</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style=" color: black;">Sessão 4</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 </header>
 <div class="container">
     <main role="main" class="pb-3">
