--- a/Atividade1/Views/Interno/PainelUsuario.cshtml
+++ b/Atividade1/Views/Interno/PainelUsuario.cshtml
@@ -2,6 +2,12 @@
     ViewData["Title"] = "Home Page";
 }
 
+<img style="display: block; margin-left: auto; margin-right: auto;" src="https://www.flaticon.com/svg/vstatic/svg/17/17004.svg?token=exp=1616429608~hmac=19d656908c80d439af06d1e6bd624c74" alt="some text" width=100 height=100>
+<br/>
+<div style="margin: auto; width: 13%;">
+    <a style="text-align: center;" asp-controller="Externo" asp-action="Index">Editar Foto de perfil</a>    
+</div>
+<br/>
 <div class="d-flex justify-content-center">
     <div id="cardDados" class="card" style="width: 18rem;">
         <div class="card-header">
@@ -9,17 +15,24 @@
         </div>
         <div class="card-body">
             <div class="form-group">
-                <label for="cpEmail">Nome:</label>
-                <input type="text" class="form-control" id="cpEmail" value="*******" name="cpNome" aria-describedby="emailHelp">
+                <label for="cpNome">Nome:</label>
+                <input type="text" class="form-control" id="cpNome" value="*******" name="cpNome" aria-describedby="emailHelp">
                 <a asp-controller="Externo" asp-action="Index">editar</a>
                 <br/>
                 <label for="cpEmail">Data de Nascimento:</label>
-                <input type="text" class="form-control" id="cpData" value="**/**/****" name="cpNome" aria-describedby="emailHelp">
+                <input type="text" class="form-control" id="cpData" value="**/**/****" name="cpData" aria-describedby="emailHelp">
+                <a asp-controller="Externo" asp-action="Index">editar</a>
+                <br/>
+                <label for="cpEmail">Email:</label>
+                <input type="text" class="form-control" id="cpEmail" value="*******" name="cpEmail" aria-describedby="emailHelp">
                 <a asp-controller="Externo" asp-action="Index">editar</a>
                 <br/>
                 <label for="cpSenha">Senha:</label>
                 <input type="text" class="form-control" id="cpSenha" value="*******" name="cpSenha" aria-describedby="emailHelp">
                 <a asp-controller="Externo" asp-action="Index">editar</a>
+                <br/>
+                <br/>
+                <button type="button" id="btn" name="btn" class="btn btn-primary">Salvar Alterações</button>
             </div>
         </div>
     </div>
