--- a/Atividade1/Views/Interno/PainelUsuario.cshtml
+++ b/Atividade1/Views/Interno/PainelUsuario.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<img style="display: block; margin-left: auto; margin-right: auto;" src="https://www.flaticon.com/svg/vstatic/svg/17/17004.svg?token=exp=1616429608~hmac=19d656908c80d439af06d1e6bd624c74" alt="some text" width=100 height=100>
+<img style="display: block; margin-left: auto; margin-right: auto;" src="/img/icone.png" alt="some text" width=100 height=100>
 <br/>
 <div style="margin: auto; width: 13%;">
     <a style="text-align: center;" asp-controller="Externo" asp-action="Index">Editar Foto de perfil</a>    
