--- a/Atividade1/Views/Interno/Index.cshtml
+++ b/Atividade1/Views/Interno/Index.cshtml
@@ -4,4 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Layout Interno</h1>
+    <h3 style="color: #28a745">@TempData["msg-login"]</h3>
 </div>
