--- a/Atividade1/Views/Externo/Cadastro.cshtml
+++ b/Atividade1/Views/Externo/Cadastro.cshtml
@@ -1,27 +1,48 @@
-﻿@{
+﻿@model Atividade1.ViewModels.Acesso.CadastroViewModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
+<div>
+    @if (@Model.Mensagem != null)
+    {
+        <p style="text-align: center; color: red " >@Model.Mensagem</p>
+    }
+</div>
+
+<div>
+    @if (@Model.CadErros != null)
+    {
+        <ul>
+        @foreach (var erro in @Model.CadErros)
+        {
+            <li>@erro</li>    
+        }
+        </ul>
+    }
+</div>
+
 <div class="d-flex justify-content-center">
-                
+    
     <div id="cardDados" class="card" style="width: 18rem;">
         <div class="card-header">
             Cadastro
         </div>
         <div class="card-body">
-            <form method="post" asp-controller="Interno" asp-action="Index" >
+            <form method="post" asp-controller="Externo" asp-action="Cadastro" >
                 <div class="form-group">
-                    <label for="cpNome">Informe seu nome:</label>
-                    <input type="text" class="form-control" id="cpNome" name="cpNome" aria-describedby="emailHelp">
+                    <label for="Nome">Informe seu nome:</label>
+                    <input type="text" class="form-control" id="Nome" name="Nome" aria-describedby="emailHelp">
                     
-                    <label for="cpEmail">Informe seu email:</label>
-                    <input type="text" class="form-control" id="cpEmail" name="cpEmail" aria-describedby="emailHelp">
+                    <label for="Email">Informe seu email:</label>
+                    <input type="text" class="form-control" id="Email" name="Email" aria-describedby="emailHelp">
 
-                    <label for="cpData">Data de nascimento:</label>
-                    <input type="text" class="form-control" id="cpData" name="cpData" aria-describedby="emailHelp">
+                    <label for="Data">Data de nascimento:</label>
+                    <input type="text" class="form-control" id="Data" name="Data" aria-describedby="emailHelp">
 
-                    <label for="cpSenha">Informe uma Senha:</label>
-                    <input type="text" class="form-control" id="cpSenha" name="cpSenha" aria-describedby="emailHelp">
+                    <label for="Senha">Informe uma Senha:</label>
+                    <input type="text" class="form-control" id="Senha" name="Senha" aria-describedby="emailHelp">
                 </div>
                             
                 <button type="submit" id="btn" name="btn" class="btn btn-primary">Cadastrar</button>
