Atividade 3 - visualizar dados do usuario

--- a/Atividade1/Views/Interno/Index.cshtml
+++ b/Atividade1/Views/Interno/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "index";
+    TempData["email"] = @TempData["email-usuario"];
 }
 
 <div class="text-center">
     <h1 class="display-4">Layout Interno</h1>
     <h3 style="color: #28a745">@TempData["msg-login"]</h3>
+    <h3 style="color: #28a745">@TempData["email"]</h3>
 </div>
