--- a/Atividade1/Views/Interno/PainelUsuario.cshtml
+++ b/Atividade1/Views/Interno/PainelUsuario.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Atividade1.ViewModels.Acesso.UserLogadoVidewModel
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -15,24 +17,18 @@
         </div>
         <div class="card-body">
             <div class="form-group">
-                <label for="cpNome">Nome:</label>
-                <input type="text" class="form-control" id="cpNome" value="*******" name="cpNome" aria-describedby="emailHelp">
-                <a asp-controller="Externo" asp-action="Index">editar</a>
-                <br/>
-                <label for="cpEmail">Data de Nascimento:</label>
-                <input type="text" class="form-control" id="cpData" value="**/**/****" name="cpData" aria-describedby="emailHelp">
-                <a asp-controller="Externo" asp-action="Index">editar</a>
+                <form method="post" asp-controller="Interno" asp-action="Editar" >
+                <input type="hidden" id="Id" name="Id" value="@Model.Id">    
                 <br/>
                 <label for="cpEmail">Email:</label>
-                <input type="text" class="form-control" id="cpEmail" value="*******" name="cpEmail" aria-describedby="emailHelp">
-                <a asp-controller="Externo" asp-action="Index">editar</a>
+                <input type="text" class="form-control" id="Email" value="@Model.Email" name="Email" >
                 <br/>
                 <label for="cpSenha">Senha:</label>
-                <input type="text" class="form-control" id="cpSenha" value="*******" name="cpSenha" aria-describedby="emailHelp">
-                <a asp-controller="Externo" asp-action="Index">editar</a>
+                <input type="text" class="form-control" id="Senha" value="@Model.Senha" name="Senha">
                 <br/>
                 <br/>
-                <button type="button" id="btn" name="btn" class="btn btn-primary">Salvar Alterações</button>
+                <button type="button" id="btn" name="btn" class="btn btn-primary">Editar</button>
+                </form>
             </div>
         </div>
     </div>
