Trabalho - Cadastro de Cliente

--- a/Atividade1/Views/Shared/_LayoutInterno.cshtml
+++ b/Atividade1/Views/Shared/_LayoutInterno.cshtml
@@ -49,7 +49,7 @@
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style="margin-right: 2rem; color: black;">Sessão 1</a>
+                        <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="SessaoCLiente" style="margin-right: 2rem; color: black;">Sessão CLiente</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style="margin-right: 2rem; color: black;">Sessão 2</a>
