--- a/Atividade1/Views/Interno/SessaoCliente.cshtml
+++ b/Atividade1/Views/Interno/SessaoCliente.cshtml
@@ -115,17 +115,20 @@
      </tr>
      </thead>
      <tbody>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td><a href="">Editar</a></td>
-            <td><a href="">Excluir</a></td>
-        </tr>
+        @foreach (var c in @Model.Clientes)
+        {
+            <tr>
+                <td>@c.TipoCliente</td>
+                <td>@c.Nome</td>
+                <td>@c.Email</td>
+                <td>@c.DataNascimento</td>
+                <td>@c.Cpf</td>
+                <td>@c.DataInsercao</td>
+                <td>@c.DataUltimaAlteracao</td>
+                <td><a asp-controller="" asp-action="" asp-route-id="@c.Id" >Editar</a></td>
+                <td><a asp-controller="Interno" asp-action="Excluir" asp-route-id="@c.Id">Excluir</a></td>
+            </tr>
+        }
      </tbody>
         
  </table>
