--- a/Atividade1/Views/Shared/_LayoutInterno.cshtml
+++ b/Atividade1/Views/Shared/_LayoutInterno.cshtml
@@ -55,7 +55,7 @@
                         <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style="margin-right: 2rem; color: black;">Sessão 2</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style="margin-right: 2rem; color: black;">Sessão 3</a>
+                        <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="SessaoLocal" style="margin-right: 2rem; color: black;">Sessão Local</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style=" color: black;">Sessão 4</a>
