Trabalho - Crud Local finalizado

--- a/Atividade1/Views/Interno/EditarCl.cshtml
+++ b/Atividade1/Views/Interno/EditarCl.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Atividade1.ViewModels.Cliente.EditclViewModel
 
 <fieldset>
-    <legend>Cadastro de cliente</legend>
+    <legend>Edição de cliente</legend>
     <form method="post" asp-action="EditarCl" asp-controller="Interno" > 
         <input type="hidden" name="ac" value="@Model.Id" />
         
