Trabalho - Crud de Evento

--- a/Atividade1/Views/Shared/_LayoutInterno.cshtml
+++ b/Atividade1/Views/Shared/_LayoutInterno.cshtml
@@ -52,7 +52,7 @@
                         <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="SessaoCliente" style="margin-right: 2rem; color: black;">Sessão Cliente</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style="margin-right: 2rem; color: black;">Sessão 2</a>
+                        <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="SessaoEvento" style="margin-right: 2rem; color: black;">Sessão Evento</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="SessaoLocal" style="margin-right: 2rem; color: black;">Sessão Local</a>
