Trabalho - Cadastro e Listagem Tipo Evento

--- a/Atividade1/Views/Shared/_LayoutInterno.cshtml
+++ b/Atividade1/Views/Shared/_LayoutInterno.cshtml
@@ -58,7 +58,7 @@
                         <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="SessaoLocal" style="margin-right: 2rem; color: black;">Sessão Local</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="Sessao" style=" color: black;">Sessão 4</a>
+                        <a class="nav-link" asp-area="" asp-controller="Interno" asp-action="SessaoTipoEvento" style=" color: black;">Sessão Tipo Evento</a>
                     </li>
                 </ul>
             </div>
